--- a/style.css
+++ b/style.css
@@ -4,3 +4,18 @@
     font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
 }
+.hero{
+    width: 100%;
+    min-height: 100vh;
+    background: linear-gradient(45deg, #08001f, #30197d);
+    color: #fff;
+    position: relative;
+}
+.container{
+    width: 800px;
+    height: 180px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
